fix(theme-default): fix overflow style of code block line-numbers

--- a/packages/@vuepress/theme-default/src/styles/code.styl
+++ b/packages/@vuepress/theme-default/src/styles/code.styl
@@ -102,7 +102,8 @@ div[class*='language-'] {
     }
 
     pre {
-      padding-left: ($lineNumbersWrapperWidth + 1)rem;
+      margin-left: $lineNumbersWrapperWidth rem;
+      padding-left: 1rem;
       vertical-align: middle;
     }
 
